[gd_scene load_steps=13 format=2]

[ext_resource path="res://images/glicose.png" type="Texture" id=1]
[ext_resource path="res://images/celula(2).png" type="Texture" id=2]
[ext_resource path="res://scenes/atp.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/glicose.gd" type="Script" id=4]
[ext_resource path="res://scripts/celula.gd" type="Script" id=5]
[ext_resource path="res://scenes/nad+.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/Button.gd" type="Script" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 202.405

[sub_resource type="CircleShape2D" id=2]
radius = 60.1835

[sub_resource type="Animation" id=3]
resource_name = "animacaoglicose"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.945312, 0.0960083, 0.0960083, 1 ), Color( 0.992188, 0.988312, 0.988312, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.2, 0.2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 355, 200 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "ida"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 420, 290 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "voltar" ]
}

[sub_resource type="Animation" id=5]
resource_name = "volta"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 705.493, 359.557 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Aproximar" ]
}

[node name="Main" type="Node"]

[node name="celula" type="Node2D" parent="."]
position = Vector2( 500, 200 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="celula"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Area_celula" type="Area2D" parent="celula"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="celula/Area_celula"]
visible = false
shape = SubResource( 1 )

[node name="CameraDetalhe" type="Camera2D" parent="celula"]
position = Vector2( -150, 0 )
zoom = Vector2( 0.5, 0.5 )

[node name="glicose" type="Node2D" parent="."]
position = Vector2( 179.638, 188.686 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="glicose"]
texture = ExtResource( 1 )

[node name="Area_glicose" type="Area2D" parent="glicose"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="glicose/Area_glicose"]
visible = false
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="glicose"]
anims/animacaoglicose = SubResource( 3 )

[node name="atp" parent="." instance=ExtResource( 3 )]
position = Vector2( 105.937, 95.39 )

[node name="nad+" parent="." instance=ExtResource( 6 )]
position = Vector2( 253.879, 41.6404 )

[node name="CameraGeral" type="Camera2D" parent="."]
position = Vector2( 337, 225 )
offset = Vector2( 100, 0 )
current = true
zoom = Vector2( 1.2, 1.2 )

[node name="Button" type="Button" parent="."]
margin_left = 705.493
margin_top = 359.557
margin_right = 783.493
margin_bottom = 382.557
text = "Aproximar"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Button"]
anims/ida = SubResource( 4 )
anims/volta = SubResource( 5 )

[connection signal="area_entered" from="celula/Area_celula" to="celula" method="_on_Area2D_area_entered"]
[connection signal="input_event" from="celula/Area_celula" to="celula" method="_on_Area_celula_input_event"]
[connection signal="area_entered" from="glicose/Area_glicose" to="glicose" method="_on_Area2D_area_entered"]
[connection signal="input_event" from="glicose/Area_glicose" to="glicose" method="_on_Area2D_input_event"]
[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
